[package]
name = "surrealql-test"
version = "0.1.0"
publish = false
edition = "2024"

[lib]
name = "surrealql_test"
path = "src/lib.rs"

[[bin]]
name = "surrealql-test"
path = "src/main.rs"

[workspace]
members = []

[features]
default = []
backend-surrealkv = ["surrealdb-core/kv-surrealkv"]
backend-rocksdb = ["surrealdb-core/kv-rocksdb"]
backend-tikv = ["surrealdb-core/kv-tikv"]
backend-indxdb = ["surrealdb-core/kv-indxdb"]
upgrade = ["backend-surrealkv", "tokio-tungstenite", "revision"] # Upgrade test suite.

[dependencies]
# Crates for running surrealdb.
surrealdb-core = { path = "../surrealdb/core", default-features = false, features = ["kv-mem"] }
surrealdb-types = { path = "../surrealdb/types" }
reblessive = { version = "0.4.3" }
rust_decimal = { version = "1.40.0", features = ["maths", "serde-str"] }

# Used for capturing logs from core
#tracing = "*"
#tracing-subscriber = { version = "*", features = ["fmt","ansi"] }

# Error handling
anyhow = "1.0.100"

# Async utility crates
futures = "0.3.31"

# Config and cli parsing
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.11"
toml_edit = { version = "0.24.0", features = ["serde"] }
semver = "1.0.27"

# Used for formatting output
base64 = "0.22.1"
similar = "2.7.0"

# Used for for communicating with the surrealdb server during upgrade tests.
tokio-tungstenite = { version = "0.28.0", optional = true }
revision = { version = "0.17.0", optional = true }
cfg-if = "1.0.4"
serde_json = "1.0.149"

# Cross-platform time (WASM-safe)
web-time = "1.1.0"

# --- Target-specific dependencies ---

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
clap = { version = "4.5.54", features = ["cargo"] }
surrealdb-core = { path = "../surrealdb/core", default-features = false, features = ["scripting"] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.49.0", default-features = false, features = ["rt", "sync"] }
wasm-bindgen-futures = "0.4.58"
wasmtimer = { version = "0.4.3", default-features = false, features = ["tokio"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"
