[package]
name = "surrealdb-profiling"
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true

[dependencies]
surrealdb = { workspace = true, features = ["kv-mem"] }
surrealdb-types.workspace = true

anyhow.workspace = true
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
# Override workspace tracing to enable full trace-level debugging (no release_max_level_debug)
tracing = { version = "0.1.43", features = [] }
tracing-perfetto = "0.1.5"
tracing-subscriber = "0.3.22"
chrono.workspace = true

[lints]
workspace = true
