[package]
name = "surrealdb-profiling"
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true

[dependencies]
surrealdb = { workspace = true, features = ["kv-mem"] }
surrealdb-types.workspace = true

anyhow.workspace = true
clap = { version = "4.5.54", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing-perfetto = "0.1.5"
tracing-subscriber = "0.3.22"
chrono.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["surrealdb-types"]
