[package]
name = "surrealism"
version = "0.1.6"
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
surrealdb-types.workspace = true
surrealism-macros = { workspace = true, default-features = false }
surrealism-types = { workspace = true, default-features = false }

[lints]
workspace = true