[package]
name = "surrealism"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true

[dependencies]
anyhow.workspace = true
surrealdb-types.workspace = true
surrealism-macros = { workspace = true, default-features = false }
surrealism-types = { workspace = true, default-features = false }
wit-bindgen.workspace = true
inventory = "0.3.22"

[lints]
workspace = true
