[package]
name = "surrealdb-common"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hashbrown = { workspace = true, features = ["raw"] }

[lints]
workspace = true
